[tool.poetry]
name = "used-car-tracker"
version = "0.1.0"
description = ""
authors = ["Tom Dickman <tdickman@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
pysocks = "^1.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
